# Tic-tac-toe

./: README.md  artificial_intelligence.py  game_field.py  game_logic.py  main.py  pyproject.toml
